Fixed the plus icon on mobile

--- a/res/styles/main.css
+++ b/res/styles/main.css
@@ -594,7 +594,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 100;
+  z-index: 20;
 }
 
 .calendar__edit-icon {
@@ -604,13 +604,13 @@ body {
   width: 3rem;
   height: 3rem;
   font-size: 1.5rem;
-  color: #2ecc71;
+  color: var(--color-green);
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
 .calendar__edit-icon:hover {
-  color: #27ae60;
+  color: var(--color-green-dark);
 }
 
 .calendar__plus-icon {
