--- a/sass/components/_calendar.scss
+++ b/sass/components/_calendar.scss
@@ -218,7 +218,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 100;
+    z-index: 20;
   }
 
   &__edit-icon {
@@ -228,11 +228,11 @@
     width: 3rem;
     height: 3rem;
     font-size: 1.5rem;
-    color: #2ecc71;
+    color: var(--color-green);
     transition: all 0.3s ease-in-out;
 
     &:hover {
-      color: #27ae60;
+      color: var(--color-green-dark);
     }
   }
 
